api/swim_form/src/tests/derive/form/tag_no_to_string.stderr
error[E0277]: the trait bound `B: AsRef<str>` is not satisfied
  --> $DIR/tag_no_to_string.rs:24:9
   |
24 |         a: B,
   |         ^ the trait `AsRef<str>` is not implemented for `B`
   |
   = note: required for the cast to the object type `dyn AsRef<str>`

error[E0277]: the trait bound `B: AsRef<str>` is not satisfied
   --> $DIR/tag_no_to_string.rs:21:14
    |
21  |     #[derive(Form)]
    |              ^^^^ the trait `AsRef<str>` is not implemented for `B`
    |
note: required by `as_ref`
   --> $DIR/mod.rs:159:5
    |
159 |     fn as_ref(&self) -> &T;
    |     ^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the derive macro `Form` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `B: swim_form::structural::Tag` is not satisfied
    --> $DIR/tag_no_to_string.rs:21:14
     |
21   |     #[derive(Form)]
     |              ^^^^ the trait `swim_form::structural::Tag` is not implemented for `B`
     |
    ::: $WORKSPACE/api/swim_form/src/structural/read/recognizer/mod.rs
     |
     |     R: Recognizer,
     |        ---------- required by this bound in `feed_field`
     |
     = note: required because of the requirements on the impl of `Recognizer` for `TagRecognizer<B>`
     = note: this error originates in the derive macro `Form` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `B: swim_form::structural::Tag` is not satisfied
  --> $DIR/tag_no_to_string.rs:21:14
   |
21 |     #[derive(Form)]
   |              ^^^^ the trait `swim_form::structural::Tag` is not implemented for `B`
   |
   = note: required because of the requirements on the impl of `Recognizer` for `TagRecognizer<B>`
note: required by `reset`
  --> $DIR/mod.rs:99:5
   |
99 |     fn reset(&mut self);
   |     ^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `Form` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `B: swim_form::structural::Tag` is not satisfied
   --> $DIR/tag_no_to_string.rs:21:14
    |
21  |     #[derive(Form)]
    |              ^^^^ the trait `swim_form::structural::Tag` is not implemented for `B`
    |
    = note: required because of the requirements on the impl of `Default` for `TagRecognizer<B>`
note: required by `std::default::Default::default`
   --> $DIR/default.rs:116:5
    |
116 |     fn default() -> Self;
    |     ^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the derive macro `Form` (in Nightly builds, run with -Z macro-backtrace for more info)
